# petrosa-realtime-strategies

./: .bandit  .coveragerc  .cursorrules  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CI_CD_IMPLEMENTATION_SUMMARY.md  COVERAGE_90_PERCENT_ASSESSMENT.md  COVERAGE_ACHIEVEMENT_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  FINAL_COVERAGE_STATUS.md  INTEGRATION_TEST_RECOMMENDATION.md  MARKET_LOGIC_IMPLEMENTATION_SUMMARY.md  MONGODB_ATLAS_CONNECTION_FIX.md  Makefile  README.md  bandit-report.json  constants.py  coverage.json  otel_init.py  pyproject.toml  pytest.ini  requirements-310.txt  requirements-dev.txt  requirements-dev.txt.backup2  requirements.txt  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: ci-checks.yml  deploy.yml  manual-deploy.yml  request-copilot-review.yml
dashboards/: README.md  realtime-strategies-business-metrics.json
docs/: API_CONFIGURATION_IMPLEMENTATION_PLAN.md  API_CONFIGURATION_IMPLEMENTATION_PLAN_V2.md  API_USAGE_GUIDE.md  BUSINESS_METRICS.md  CI_CD_PIPELINE.md  CI_CD_PIPELINE_IMPLEMENTATION.md  DATA_TRANSFORMATION_FIX_SUMMARY.md  HEARTBEAT_FEATURE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_TEST_PLAN.md  MANUAL_DEPLOYMENT_GUIDE.md  MICROSTRUCTURE_STRATEGIES.md  OBSERVABILITY_FIX_SUMMARY.md  OCO_FIX_SUMMARY.md  OPENTELEMETRY_TRACING.md  REALTIME_STRATEGIES_FIXES.md  REALTIME_STRATEGIES_RESOLUTION_SUMMARY.md  SIGNAL_CONTRACT_FIX.md  TEST_COVERAGE_PROGRESS.md  VERSION_PLACEHOLDER_GUIDE.md  grafana-dashboard.json
docs/archive/2024-2025/: KUBERNETES_SETUP.md
docs/archive/fixes/: SIGNAL_CONFIDENCE_TYPE_ERROR_FIX.md
docs/archive/summaries/: IMPLEMENTATION_SUMMARY.md
docs/archive/temporary/: TEST_COVERAGE_FINAL_STATUS.md  TEST_COVERAGE_PROGRESS.md
k8s/: common-configmap.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  network-policy-ingress.yaml  network-policy.yaml  service.yaml
scripts/: README.md  __init__.py  bug-investigation.sh  bump-version.sh  check-test-assertions.py  deploy-local.sh  run_pipeline.py  setup-dev.sh  test_config_compatibility.py  test_heartbeat.py  test_market_logic.py  test_setup.py
scripts/migrations/: 001_strategy_configs.sql
strategies/: __init__.py  main.py
strategies/adapters/: __init__.py  signal_adapter.py
strategies/api/: __init__.py  config_routes.py  metrics_routes.py  response_models.py
strategies/core/: __init__.py  consumer.py  processor.py  publisher.py
strategies/db/: __init__.py  mongodb_client.py
strategies/health/: __init__.py  server.py
strategies/market_logic/: __init__.py  btc_dominance.py  cross_exchange_spread.py  defaults.py  iceberg_detector.py  onchain_metrics.py  spread_liquidity.py
strategies/models/: __init__.py  market_data.py  metrics.py  orderbook_tracker.py  orders.py  signals.py  spread_metrics.py  strategy_config.py
strategies/services/: __init__.py  config_manager.py  data_manager_client.py  depth_analyzer.py  metrics_aggregator.py
strategies/utils/: __init__.py  circuit_breaker.py  heartbeat.py  logger.py  metrics.py  telemetry.py
tests/: __init__.py  conftest.py  test_basic.py  test_btc_dominance.py  test_circuit_breaker.py  test_config_api.py  test_config_rollback.py  test_config_routes_comprehensive.py  test_consumer.py  test_consumer_additional.py  test_consumer_comprehensive.py  test_coverage_boost.py  test_defaults.py  test_depth_analyzer.py  test_depth_analyzer_comprehensive.py  test_health_server_comprehensive.py  test_heartbeat_comprehensive.py  test_iceberg_detector.py  test_integration_simple.py  test_issue_146_otel_fixes.py  test_logger.py  test_main.py  test_main_comprehensive.py  test_market_data_edges.py  test_metrics.py  test_metrics_integration.py  test_metrics_routes_comprehensive.py  test_mongodb_client_comprehensive.py  test_nats_trace_propagation.py  test_onchain_metrics.py  test_orderbook_tracker.py  test_orderbook_tracker_comprehensive.py  test_orders.py  test_orders_comprehensive.py  test_publisher.py  test_publisher_advanced.py  test_rollback.py  test_signal_adapter.py  test_signals.py  test_signals_comprehensive.py  (+5 more)
tests/fixtures/: market_data_realistic.py
tests/unit/: test_market_logic_comprehensive.py  test_strategies.py
